feat: Enhance student management system with semester and academic year support
- Added semesterId and semesterName to ScoreResponse for better score tracking.
- Introduced AcademicYear and Semester entities with appropriate relationships.
- Updated ClassEntity, Student, and Subject entities to ignore their respective lists in JSON responses.
- Implemented CORS filter for API requests.
- Created DataInitializer to set up default admin user on application startup.
- Removed AnalyticsResource and AnalyticsService as they were deemed unnecessary.
- Enhanced AttendanceResource to support filtering by studentId and scheduleId.
- Updated ReportResource to include new endpoints for class grades and attendance reports.
- Modified ScoreResource to allow students to view their scores based on their role.
- Updated services to use listAll() instead of findAll() for better performance.
- Added Flyway migrations for database schema initialization and updates.
- Removed deprecated import.sql file.